tests/code/pass/pass_operator_compl.u
entrypoint: ~()->(iErrorCode:~i64{2})
{
	iErrorCode:=~iErrorCode;
}