tests/code/fail/fail_entrypoint_namespace.u
namespace:math
{
	entrypoint: ~()->(iErrorCode:~i64{2})
	{
	}
}
